# labapi

./: .env  .env.back  .env.local  .gitignore  Cargo.toml  env.ecs
.github/workflows/: rust.yml
db/: schema.sql
src/: app_state.rs  errors.rs  main.rs  models.rs  utils.rs
src/middleware/: auth.rs  rbac.rs
src/routes/: accounts.rs  admin.rs  auth.rs  cash.rs  digiflaz.rs  disbursment.rs  investment.rs  journals.rs  notifications.rs  profile.rs  transfers.rs
