[package]
name = "labapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread","macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde","v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","chrono","macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
thiserror = "1"
tower-http = { version = "0.5", features = ["trace","cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
md5 = "0.7"
